Refactor and add setReminderMethod endpoint
